# gpr_whole

devel/: .catkin  .rosinstall  _setup_util.py
devel/include/template_package_msgs/: example.h
devel/lib/pkgconfig/: multibeam_process_core.pc  multibeam_process_online.pc  multibeam_process_tools.pc  sensor_stream_ros.pc  template_package.pc  template_package_msgs.pc
devel/lib/template_package/: template_package-other_test  template_package-utest
devel/share/template_package/cmake/: template_packageConfig.cmake
src/multibeam_process/: .gitignore
src/multibeam_process/multibeam_process_core/: CMakeLists.txt
src/multibeam_process/multibeam_process_online/: CMakeLists.txt
src/multibeam_process/multibeam_process_tools/: CMakeLists.txt  package.xml
src/multibeam_process/multibeam_process_tools/config/: mapping_config.rviz  patch_test.rviz  scanmapper_config.yaml
src/multibeam_process/multibeam_process_tools/doc/: Doxyfile
src/multibeam_process/multibeam_process_tools/include/multibeam_process_tools/: patchtester.h
src/multibeam_process/multibeam_process_tools/include/multibeam_process_tools/ui/: patch_tester_gui.h  patch_tester_gui.ui  ping_range_edit.h  ping_range_edit.ui
src/multibeam_process/multibeam_process_tools/launch/: patch_testerize.launch  static_tf.launch
src/multibeam_process/multibeam_process_tools/nodes/: octomap2pcd.cpp  patch_tester.cpp
src/multibeam_process/multibeam_process_tools/src/: patchtester.cpp
src/multibeam_process/multibeam_process_tools/src/ui/: ctkrangeslider.cpp  patch_tester_gui.cpp  ping_range_edit.cpp
src/multibeam_process/multibeam_process_tools/testing/: multibeam_fuser.cpp
src/sensor_stream_ros/: CMakeLists.txt  README.md  package.xml
src/sensor_stream_ros/analysis/: hp_plotter.py  hp_plotter_delauny.py  performance_plotter.py
src/sensor_stream_ros/cfg/: bpslam.rviz  gpr_mapper.yaml  gpr_mapper_pos.yaml
src/sensor_stream_ros/include/sensor_stream_ros/: block_tiler.cpp  block_tiler.h  gpr_bag_mapper.cpp  gpr_bag_mapper.h  gpr_mapper.cpp  gpr_mapper.h  gpr_sector.cpp  gpr_sector.h  multires_pcl_gpr.cpp  multires_pcl_gpr.h  pcl_predictor.cpp  pcl_predictor.h  ss_cv.cpp  ss_cv.h
src/sensor_stream_ros/include/sensor_stream_ros/bpslam/: bpslam.cpp  bpslam.h  bpslam_bag_processor.cpp  bpslam_bag_processor.h  bpslam_particle_data.cpp  bpslam_particle_data.h  indexing.h  particle.h  particle.hpp  particle_publisher.cpp  particle_publisher.h  pf_base.h  pf_base.hpp  tf_chain_buffer.cpp  tf_chain_buffer.h
src/sensor_stream_ros/include/sensor_stream_ros/bpslam/worker/: block_proj_worker.cpp  block_proj_worker.h  ekf_worker.cpp  ekf_worker.h  gpr_worker.cpp  gpr_worker.h  particle_worker.cpp  particle_worker.h  recursive_gpr_worker.cpp  recursive_gpr_worker.h
src/sensor_stream_ros/include/sensor_stream_ros/common/: abstract_block.cpp  abstract_block.h  blockarray.cpp  blockarray.h  hp_optimizer.cpp  hp_optimizer.h  sensorframeblock.cpp  sensorframeblock.h  single_frame_block.cpp  single_frame_block.h
src/sensor_stream_ros/include/sensor_stream_ros/profiling/: metric.cpp  metric.h  report.cpp  report.h  series.cpp  series.h  yaml_metric.cpp  yaml_metric.h
src/sensor_stream_ros/include/sensor_stream_ros/ui/: bpslam_bag_widget.cpp  bpslam_bag_widget.h  bpslam_bag_widget.ui  bpslam_bag_worker.cpp  bpslam_bag_worker.h  bpslam_particle_widget.cpp  bpslam_particle_widget.h  bpslam_particle_widget.ui  bpslam_widget.cpp  bpslam_widget.h  bpslam_widget.ui  csv2gpr_widet.cpp  csv2gpr_widet.h  csv2gpr_widet.ui  csv2gpr_worker.cpp  csv2gpr_worker.h  inline_file_selector.cpp  inline_file_selector.h  inline_file_selector.ui  key_value_widget.cpp  key_value_widget.h  key_value_widget.ui  regression_params_widget.cpp  regression_params_widget.h  regression_params_widget.ui
src/sensor_stream_ros/include/sensor_stream_ros/ui/profiling/: graph_edit.cpp  graph_edit.h  graph_edit.ui  series_plot.cpp  series_plot.h  series_plot.ui  series_plot_array.cpp  series_plot_array.h  series_plot_array.ui  series_plot_editor.cpp  series_plot_editor.h  series_plot_editor.ui
src/sensor_stream_ros/launch/: bpslam.launch  gpr_mapper_pos.launch
src/sensor_stream_ros/old_test/: bpslam_tests.cpp  gpr_tests.cpp  sparse_tests.cpp
src/sensor_stream_ros/python/: compare_odom.py  plot_bpslam.py
src/sensor_stream_ros/sensor_stream/: .gitignore  CMakeLists.txt  README.md
src/sensor_stream_ros/sensor_stream/doc/: doxyfile.txt
src/sensor_stream_ros/sensor_stream/include/sensor_stream/: abstractcsrmat.cpp  abstractcsrmat.h  abstractmat.cpp  abstractmat.h  blockgpr.cu  blockgpr.h  cudablockmat.cpp  cudablockmat.h  cudablockmatcsc.cpp  cudablockmatcsc.h  cudamat.cu  cudamat.h  cudamat_operations.cu  cudamat_operations.h  cudasparsemat.cu  cudasparsemat.h  devhostdata.cu  devhostdata.h  gpr.cu  gpr.h  perf_timer.cpp  perf_timer.h  sparsemat_operations.cu  sparsemat_operations.h
src/sensor_stream_ros/sensor_stream/include/sensor_stream/gpr/: abstractkernel.cpp  abstractkernel.h  fixedhpkernel.cpp  fixedhpkernel.h  gpr_tools.cu  gpr_tools.h  kernels.cu  kernels.h  sqexpsparse2d.cu  sqexpsparse2d.h
src/sensor_stream_ros/sensor_stream/include/sensor_stream/handlers/: cublashandler.cpp  cublashandler.h  cuda_handler.cpp  cuda_handler.h
src/sensor_stream_ros/sensor_stream/main/: block_gpr.cpp  cudamat_example.cu  gp_example.cpp  gpr2d_example.cpp  sparse_test.cpp
src/sensor_stream_ros/sensor_stream/main/testing/: memtest.cpp  pcl_gp.cpp  pcl_tile_gp.cpp  sparse_chol.cu
src/sensor_stream_ros/sensor_stream/prof/: gpr2d.nvvp
src/sensor_stream_ros/src/experiments/: flyer_gpr.cpp  pcl_hp_optimizer.cpp  variable_block_size.cpp  variable_hyperparam.cpp
src/sensor_stream_ros/src/nodes/: gpr_mapper_node.cpp
src/sensor_stream_ros/src/post_processing/: bpslam_bag.cpp  bpslam_bag_gui.cpp  csv_gpr_gui.cpp  gpr_mapper_bag.cpp  pcl2gpr.cpp  pcl_gpr.cpp  pcl_multires_gpr.cpp
src/sensor_stream_ros/src/scratch/: tile_test.cpp
src/sensor_stream_ros/tests/: cudamat_operations_tests.cpp  cudamat_tests.cpp
src/template_package/template_package/: CMakeLists.txt
(+29 files in other folders)
